<resources>
    <string name="app_name">BlueShoes</string>
    <string name="navigation_drawer_open">Menu gaveta aberto</string>
    <string name="navigation_drawer_close">Menu gaveta fechado</string>
    <string name="action_settings">Settings</string>
    <string name="tx_login">Login</string>
    <string name="tx_or">ou</string>
    <string name="tx_me_sign_up">me Cadastrar</string>
    <string name="tx_conected_as">Conectado como:</string>
    <string name="item_all_shoes">Todos os calçados</string>
    <string name="item_flip_flops">Chinelos</string>
    <string name="item_cleats">Chuteiras</string>
    <string name="item_sandals">Sandálias</string>
    <string name="item_ballet_shoes">Sapatilhas</string>
    <string name="item_suit_shoes">Sapatênis</string>
    <string name="item_shoes">Tênis</string>
    <string name="item_performance_shoes">Tênis performance</string>
    <string name="item_contact">Contato BlueShoes</string>
    <string name="item_about">Sobre</string>
    <string name="item_privacy_policy">Políticas de privacidade</string>
    <string name="item_my_orders">Meus pedidos</string>
    <string name="item_settings">Minhas configurações</string>
    <string name="item_sign_out">Sair</string>
    <string name="about_frag_title">Sobre a BlueShoes</string>
    <string name="about_frag_mission_title">Missão</string>
    <string name="about_frag_mission_desc">
        Inspirar e transformar a vida das pessoas com calçados que
        permitem qualquer atividade no dia a dia.
    </string>
    <string name="about_frag_vision_title">Visão</string>
    <string name="about_frag_vision_desc">
        A melhor e mais inovadora experiência de compra do varejo
        de calçados.
    </string>
    <string name="about_frag_values_title">Valores</string>
    <string name="about_frag_values_desc">
        Ética, responsabilidade, espírito de equipe, inspiração e
        foco.
    </string>
    <string name="about_frag_ethic_title">Ética e integridade</string>
    <string name="about_frag_ethic_desc">
        A ética e a integridade fazem parte da nossa cultura e são
        essenciais para o nosso negócio.
    </string>
    <string name="about_frag_social_networks_title">
        Nos acompanhe nas redes sociais e não perca as promoções
    </string>
    <string name="ic_instagram_desc">Ícone do Instagram BlueShoes</string>
    <string name="label_instagram">/BlueShoes</string>
    <string name="ic_facebook_desc">Ícone do Facebook BlueShoes</string>
    <string name="label_facebook">/BlueShoesFace</string>
    <string name="ic_twitter_desc">Ícone do Twitter BlueShoes</string>
    <string name="label_twitter">/BlueShoesTwitter</string>
    <string name="ic_youtube_desc">Ícone do YouTube BlueShoes</string>
    <string name="label_youtube">/BlueShoesYT</string>
    <string name="ic_linkedin_desc">Ícone do LinkedIn BlueShoes</string>
    <string name="label_linkedin">/BlueShoesLkIn</string>
    <string name="info_linkedin">Para oportunidades de emprego!</string>
    <string name="ic_cnpj_desc">Ícone do CNPJ BlueShoes</string>
    <string name="label_cnpj">CNPJ 25.002.230/0001&#8211;10</string>
    <string name="contact_frag_title">Contato</string>
    <string name="ic_info_desc">Ícone de informação.</string>
    <string name="contact_frag_info">
        Em caso de problemas com a mercadoria ou em caso de trocas,
        seja bem específico e também adicione o número do pedido.
    </string>
    <string name="contact_frag_phones_title">Telefones</string>
    <string name="ic_phone_desc">Ícone de telefone.</string>
    <string name="contact_frag_phone_cities">(27) 3333&#8211;1111</string>
    <string name="contact_frag_phone_cities_info">
        Espírito Santo e demais capitais no Brasil.
    </string>
    <string name="contact_frag_phone_other_regions">0800 111 0000</string>
    <string name="contact_frag_phone_other_regions_info">
        Demais regiões no Brasil.
    </string>
    <string name="contact_frag_emails_title">E-mails</string>
    <string name="ic_email_desc">Ícone de e-mail.</string>
    <string name="contact_frag_email_orders">pedidos@blueshoes.com.br</string>
    <string name="contact_frag_email_orders_info">
        Problemas com entrega ou defeito.
    </string>
    <string name="contact_frag_email_attendance">atendimento@blueshoes.com.br</string>
    <string name="contact_frag_email_attendance_info">
        Demais problemas / dúvidas.
    </string>
    <string name="chooser_email_text">
        Enviar e-mail com:
    </string>
    <string name="info_email_app_install">
        Instale algum aplicativo de e-mail.
    </string>
    <string name="contact_frag_address_title">Endereço</string>
    <string name="ic_map_marker_desc">Ícone marcador de localização em map.</string>
    <string name="contact_frag_address">
        Rua Vergueiro, 943 - Serra - CEP 29504-001 - Espírito Santo - ES.
    </string>
    <string name="contact_frag_address_formatted_to_google_maps">
        Rua Vergueiro, Serra, Espírito Santo, Brasil.
    </string>
    <string name="info_google_maps_install">
        Instale o aplicativo do Google Maps.
    </string>
    <string name="privacy_policy_frag_title">
        Políticas de privacidade
    </string>
    <string name="title_activity_login">
        Login
    </string>
    <string name="invalid_email">
        Forneça um e-mail válido.
    </string>
    <string name="invalid_password">
        Mínimo de 6 caracteres.
    </string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="forgot_my_password">
        Esqueci minha senha
    </string>
    <string name="sign_in">Entrar</string>
    <string name="sign_in_going">Entrando&#8230;</string>
    <string name="or">ou</string>
    <string name="create_my_account">
        Criar minha conta
    </string>
    <string name="privacy_policy">
        Políticas de privacidade
    </string>
    <string name="invalid_login">
        Dados de login inválidos.
    </string>
    <string name="title_activity_forgot_password">
        Recuperação de senha
    </string>
    <string name="forgot_password_info">
        Informe abaixo o seu e-mail de login e em seguida acesse
        o e-mail para prosseguir com o passo a passo de recuperação
        de acesso.
    </string>
    <string name="hint_login_email">E-mail de login</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="recover_password_going">Enviando&#8230;</string>
    <string name="invalid_login_email">
        E-mail não encontrado em nossa base de dados.
    </string>
    <string name="title_activity_sign_up">
        Cadastro
    </string>
    <string name="hint_email_to_login">E-mail (para login)</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="do_login">Realizar login</string>
    <string name="sign_up">Cadastrar</string>
    <string name="sign_up_going">Cadastrando&#8230;</string>
    <string name="invalid_sign_up_email">
        E-mail já cadastrado.
    </string>
    <string name="invalid_confirmed_password">
        Confirme a senha informada no campo acima.
    </string>
    <string name="title_activity_account_settings">
        Configurações de conta
    </string>
    <string name="connected">Conectado:</string>
    <string name="setting_item_profile">Perfil</string>
    <string name="setting_item_profile_desc">
        Para atualização de nome e foto de perfil.
    </string>
    <string name="setting_item_login">Conexão (login)</string>
    <string name="setting_item_login_desc">
        Para atualização de e-mail ou senha de acesso.
    </string>
    <string name="setting_item_address">Endereços</string>
    <string name="setting_item_address_desc">
        Para adição, remoção ou atualização de endereços de entrega.
    </string>
    <string name="setting_item_credit_cards">Cartões de crédito</string>
    <string name="setting_item_credit_cards_desc">
        Para adição e remoção de cartões de crédito.
    </string>
    <string name="title_activity_config_profile">
        Perfil
    </string>
    <string name="info_profile_photo">
        Toque na foto para abrir a galeria ou fotografia.
    </string>
    <string name="name_label">Nome:</string>
    <string name="config_profile">Atualizar perfil</string>
    <string name="config_profile_going">Atualizando&#8230;</string>
    <string name="invalid_name">
        Nome inválido.
    </string>
    <string name="invalid_config_profile">
        Um nome válido deve ser fornecido
    </string>
    <string name="imagepicker_msg_no_images">
        Não há imagens na galeria.
    </string>
    <string name="imagepicker_gallery_activity">Galeria</string>
    <string name="imagepicker_cam_photos_activity">
        Fotos câmera BlueShoes
    </string>
    <string name="imagepicker_selection_limit">
        Apenas uma imagem pode ser selecionada.
    </string>
    <string name="title_activity_config_connection_data">
        Conexão (login)
    </string>
    <string name="dialog_password_info">
        Entre com a senha para poder prosseguir:
    </string>
    <string name="dialog_password_hint">Senha</string>
    <string name="dialog_password_go">PROSSEGUIR</string>
    <string name="dialog_password_cancel">CANCELAR</string>
    <string name="config_connection_data_tab_email">E-MAIL</string>
    <string name="hint_current_email">E-mail atual</string>
    <string name="hint_new_email">Novo e-mail</string>
    <string name="hint_new_email_confirm">Confirmar novo e-mail</string>
    <string name="invalid_confirmed_email">
        Confirme o e-mail informado no campo acima.
    </string>
    <string name="update_email_login">Atualizar e-mail de login</string>
    <string name="update_email_login_going">Atualizando&#8230;</string>
    <string name="config_connection_data_tab_password">SENHA</string>
    <string name="hint_new_password">Nova senha</string>
    <string name="hint_new_password_confirm">Confirmar nova senha</string>
    <string name="update_password">Atualizar senha</string>
    <string name="update_password_going">Atualizando&#8230;</string>
    <string name="title_activity_config_credit_cards">
        Cartões de crédito
    </string>
    <string name="config_credit_cards_tab_list">CARTÕES</string>
    <string name="credit_card_list_empty">
        Ainda não há cartões de crédito cadastrados.
    </string>
    <string name="credit_card_removed">
        Cartão de crédito removido com sucesso.
    </string>
    <string name="credit_card_enterprise_label">Bandeira:</string>
    <string name="credit_card_number_label">Número:</string>
    <string name="credit_card_owner_name_label">Nome:</string>
    <string name="remove_item">Remover</string>
    <string name="remove_item_going">Removendo&#8230;</string>
    <string name="config_credit_cards_tab_new">NOVO</string>
    <string name="add_credit_card_number_label">Número:</string>
    <string name="add_credit_card_enterprise_label">Bandeira:</string>
    <string name="add_credit_card_owner_name_label">
        Nome (como está no cartão):
    </string>
    <string name="add_credit_card_owner_reg_number_label">
        CPF / CNPJ do proprietário do cartão:
    </string>
    <string name="add_credit_card_expiry_label">Vencimento:</string>
    <string name="add_credit_card_expiry_month_label">Mês:</string>
    <string name="add_credit_card_expiry_year_label">
        Ano (quatro dígitos):
    </string>
    <string name="add_credit_card_security_code_label">
        Código de segurança:
    </string>
    <string name="add_credit_card">Adicionar cartão</string>
    <string name="add_credit_card_going">Adicionando&#8230;</string>
    <string name="invalid_credit_card">
        Cartão inválido, verifique os dados novamente.
    </string>
    <string name="title_activity_config_delivery_addresses">
        Endereços para entrega
    </string>
</resources>