<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_container_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextFormField"
            android:background="@drawable/bg_form_field_top"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/hint_email_to_login"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextFormField"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_form_field_sqr"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/hint_password"/>

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditTextFormField"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_form_field_bottom"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/hint_confirm_password"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextViewLink"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
        app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
        android:text="@string/do_login"
        android:onClick="callLoginActivity"/>

    <Button
        android:id="@+id/bt_sign_up"
        style="@style/ButtonForm"
        app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
        app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
        android:onClick="mainAction"
        android:text="@string/sign_up"/>

    <include layout="@layout/text_view_privacy_policy_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>