<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Informação principal -->
    <LinearLayout
        android:id="@+id/ll_info_container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightYellowBox"
        android:padding="12dp"
        android:orientation="horizontal">

        <ImageView
                style="@style/ImageViewLink"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:tint="@color/colorText"
                android:contentDescription="@string/ic_info_desc"
                android:src="@drawable/ic_information_black_18dp"/>
        <TextView
                style="@style/TextViewLink"
                android:textColor="@color/colorText"
                android:text="@string/forgot_password_info"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextFormField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/bg_form_field"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:hint="@string/hint_login_email"/>

    <Button
        android:id="@+id/bt_recover_password"
        style="@style/ButtonForm"
        android:layout_marginTop="12dp"
        android:paddingLeft="38dp"
        android:paddingRight="38dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintRight_toRightOf="@+id/et_email"
        android:onClick="mainAction"
        android:text="@string/recover_password"/>

</android.support.constraint.ConstraintLayout>